Added post to the application

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/vkalaparthy/burger.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Vani K",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/vkalaparthy/burger/issues"
